# simple_stereo_vision_lib

./: .gitmodules  LICENSE  README.md  cam_nav.h  simple_stereo_vision_lib.h  ssvl.h
examples/c/: .gitignore  CMakeLists.txt  README.md  main.c
examples/c_hello_world/: main.c
examples/godot/: .gitignore  README.md  SConstruct
examples/godot/cam_nav_demo/: icon.svg.import  main.tscn  project.godot  texture_cobble.png.import
examples/godot/simple_stereo_vision_lib_demo/: main.tscn
examples/godot/src/: cam_nav_demo_node.cpp  cam_nav_demo_node.h  register_types.cpp  register_types.h  simple_stereo_vision_lib_demo_node.cpp  simple_stereo_vision_lib_demo_node.h
examples/web/: package-lock.json  package.json  tailwind.config.ts
examples/web/app/: layout.tsx  page.tsx  player.tsx
examples/web/public/assets/models/: scene.blend  scene.blend1  scene.glb
examples/web/public/assets/textures/: grid.xcf
